# medea-flutter-webrtc

./: .clippy.toml  .editorconfig  .env  .gitignore  .pubignore  .rustfmt.toml  .swift-format  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  analysis_options.yaml  cpp  download_mobile.sh  err.txt  flutter-webrtc.code-workspace  nohup.out  pubspec.yaml  test.txt
android/: .gitignore  build.gradle  settings.gradle
crates/libwebrtc-sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
crates/libwebrtc-sys/cpp_src/: bridge.cc  custom_video_renderer.cc  device_video_capturer.cpp  main_wnd.cc  native_win_rndrr.cc  scalable_track_source.cpp  screen_video_capturer.cpp  sdl_renderer.cpp
crates/libwebrtc-sys/include/: VcmCapturer.h  adm.h  adm_proxy.h  audio_device_recorder.h  audio_device_utils.h  audio_recorder.h  bridge.h  custom_notifier.h  custom_track_source.h  custom_video_renderer.h  debbouncer.h  delegating_apm.h  device_info_mac.h  device_video_capturer.h  fake_video_track_source.h  local_audio_source.h  mac_capturer.h  main_wnd.h  media_stream_track_interface.h  media_stream_track_interface_getters.h  mouse_cursor_monitor_mac.h  native_win_rndrr.h  peer_connection.h  peer_connection_observer.h  rtp_codec_parameters.h  rtp_codec_parameters_getters.h  rtp_encoding_parameters.h  rtp_encoding_parameters_getters.h  rtp_parameters.h  rtp_parameters_getters.h  rtp_receiver_interface.h  rtp_receiver_interface_getters.h  rtp_sender_interface.h  rtp_sender_interface_getters.h  screen_video_capturer.h  sdl_renderer.h  stats.h  vdpau.h  video_capture_mac.h  video_renderer_sink.h  (+3 more)
crates/libwebrtc-sys/include/sys_audio_capture/: capture.h  linux_capture.h  mac_capture.h  win_capture.h
crates/libwebrtc-sys/include/wil/: result.h
crates/libwebrtc-sys/include/win/: audio_display_recorder.h
crates/libwebrtc-sys/momo/: custom_track_source.cpp  custom_track_source.h
crates/libwebrtc-sys/src/: VcmCapturer.cc  VideoCapturer.cc  bridge.cc  bridge.rs  lib.rs  peer_connection_observer.cc
crates/libwebrtc-sys/src/cpp/: adm.cc  adm_proxy.cc  audio_device_recorder.cc  audio_device_utils.cc  bridge.cc  custom_track_source.cpp  custom_video_renderer.cc  delegating_apm.cc  device_info_mac.mm  device_video_capturer.cc  device_video_capturer.cpp  fake_frame_source.cc  local_audio_source.cc  logging_mac.mm  mac_capturer.mm  media_stream_track_interface.cc  media_stream_track_interface_getters.cc  mouse_cursor_monitor_mac.mm  peer_connection.cc  peer_connection_observer.cc  rtp_codec_parameters.cc  rtp_codec_parameters_getters.cc  rtp_encoding_parameters.cc  rtp_encoding_parameters_getters.cc  rtp_parameters.cc  rtp_parameters_getters.cc  rtp_receiver_interface.cc  rtp_receiver_interface_getters.cc  rtp_sender_interface.cc  rtp_sender_interface_getters.cc  screen_video_capturer.cc  screen_video_capturer.cpp  stats.cc  test_audio_device.cc  test_audio_device_module.cc  vdpau.cc  video_capture_mac.mm  video_renderer_sink.cc  video_renderer_sink_observer.cc  video_sink.cc  (+1 more)
crates/libwebrtc-sys/src/cpp/sys_audio_capture/: linux_capture.cc  mac_capture.mm  win_capture.cc
crates/libwebrtc-sys/src/cpp/win/: audio_display_recorder.cc  audio_display_recorder.cpp
crates/libwebrtc-sys/tests/: integration_test.rs  test_test.rs
crates/native/: Cargo.toml  bindings.h  build.rs
crates/native/include/: api.h  call_observer.h  callback.h  observer.h  rust_call_callback.h
crates/native/src/: api.rs  apiDart.rs  api_dart.rs  bridge_generated.io.rs  bridge_generated.rs  call_observer.cc  cpp_api.rs  device_info.rs  devices.rs  frame.rs  frb.rs  frb_generated.rs  internal.rs  lib.rs  linux_device_manager.rs  logging.rs  media_devices.m  notifier.rs  pc.rs  peer_connection.rs  platform.rs  renderer.rs  stream_sink.rs  user_media.rs  video_sink.rs
crates/native/src/api/: media_info.rs  mod.rs
crates/native/src/api/media/: mod.rs
crates/native/src/api/media/constraints/: audio.rs
crates/native/src/api/media_stream_track/: audio_processing_config.rs  media_type.rs  mod.rs
crates/native/src/api/peer/: mod.rs  rtc_session_description.rs
crates/native/src/api/stats/: mod.rs
crates/native/src/api/transceiver/: mod.rs
crates/native/src/cpp/: rust_call_callback.cc
crates/native/src/device_info/: mod.rs
crates/native/src/frame/: mod.rs
crates/native/src/media/: device.rs  mod.rs  source.rs  track.rs
crates/native/src/renderer/: cpp_api.rs  mod.rs
crates/native/src/user_media/: mod.rs
example/: analysis_options.yaml  pubspec.yaml
ios/: .gitignore  flutter_webrtc.podspec  medea_flutter_webrtc.podspec  medea_jason_webrtc.podspec
lib/: flutter_webrtc.dart  jason_flutter_webrtc_win.dart  medea_flutter_webrtc.dart  medea_jason_webrtc.dart  (+1 more)
linux/: .gitignore  CMakeLists.txt  flutter_webrtc_plugin.cc  medea_flutter_webrtc_plugin.cc  medea_jason_webrtc_plugin.cc
linux/include/: video_texture.h
linux/include/flutter_webrtc/: flutter_web_r_t_c_plugin.h
linux/include/medea_jason_webrtc/: medea_jason_webrtc_plugin.h
linux/rust/include/: flutter_webrtc_native.h
linux/rust/lib/: flutter_webrtc_native.d
linux/rust/src/: flutter_webrtc_native.cc
windows/: .gitignore  .pubignore  CMakeLists.txt  flutter_webrtc_plugin.cc  medea_flutter_webrtc_plugin.cpp  medea_jason_webrtc_plugin.cpp  medea_jason_webrtc_plugin.h  medea_jason_webrtc_plugin_c_api.cpp
windows/cpp/src/: flutter_webrtc.cc
windows/cxx/include/: cxx.h
windows/cxx/src/: cxx.cc
windows/include/: flutter_peer_connection.h  flutter_video_renderer.h  flutter_webrtc.h  flutter_webrtc_base.h  media_stream.h  parsing.h  peer_connection.h  texture_video_renderer.h  video_renderer.h  wrapper.h  wrapper2.h
windows/include/medea_jason_webrtc/: medea_jason_webrtc_plugin_c_api.h
windows/rust/include/: jason_flutter_webrtc.hpp
windows/rust/lib/: flutter_webrtc_native.dll.lib  jason_flutter_webrtc.dll.lib
windows/src/: flutter_peer_connection.cc  flutter_video_renderer.cc  flutter_webrtc.cc  flutter_webrtc_base.cc  media_stream.cc  peer_connection.cc  test_obs.cc  texture_video_renderer.cc  video_renderer.cc
(+599 files in other folders)
