[package]
name = "libwebrtc-sys"
version = "0.0.0"
edition = "2021"
publish = false
links = "webrtc"

[dependencies]
anyhow = "1.0"
cxx = "1.0"

[build-dependencies]
anyhow = "1.0"
cxx-build = "1.0"
dotenv = "0.15"
pkg-config = "0.3.24" # TODO(alexlapa): make conditional
reqwest = { version = "0.11", features = ["blocking"] }
walkdir = "2.3"
