[package]
name = "flutter-webrtc-native"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cxx = "1.0"
dashmap = "5.1"
derive_more = "0.99"
libwebrtc-sys = { path = "../libwebrtc-sys" }
once_cell = "1.10"
threadpool = "1.8.1"
flutter_rust_bridge = "1.9.0"
winapi = { version = "0.3", features = ["winuser", "dbt"] }
nokhwa = { version = "0.9.4", features = ["input-msmf"]}

[build-dependencies]
anyhow = "1.0"
cxx-build = "1.0"
walkdir = "2.3"
