[package]
name = "flutter-webrtc-native"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cxx = "1.0"
dashmap = "5.2"
derive_more = "0.99"
flutter_rust_bridge = "1.23"
lazy_static = "1.4"
libwebrtc-sys = { path = "../libwebrtc-sys" }
log = "0.4"
once_cell = "1.10"
threadpool = "1.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dbt"] }

[build-dependencies]
cxx-build = "1.0"
